@@ -158,6 +158,6 @@ member of the
 L<Leibniz-Gemeinschaft|http://www.leibniz-gemeinschaft.de/>.
 
 This program is free software published under the
-L<BSD-2 License|https://raw.githubusercontent.com/KorAP/KorAP-XML-TEI/master/LICENSE>.
+L<BSD-2 License|https://opensource.org/licenses/BSD-2-Clause>.
 
 =cut
